--- a/2장_표만들기_백서현.html
+++ b/2장_표만들기_백서현.html
@@ -9,6 +9,11 @@
 <body>
   <h1>2줄 3칸 기본 표만들기</h1> 
   <table border="1" width="50%">
+    <caption>
+       <strong>기본 테이블입니다.</strong>
+       <br>
+       2줄 3칸짜리 표입니다.
+    </caption>
      <!--1번 줄-->
      <tr>
        <td>1</td>
@@ -25,6 +30,11 @@
 
 <hr>
 <h1>표에 제목 셀 만들기</h1>
+<figure>
+  <figcaption>
+     표에 제목 셀 만들기 입니다.
+  </figcaption>
+</figure>
 <table border="1"width "100%">
  <tr>
         <th>학과</th>
@@ -70,5 +80,82 @@
 
 
 </table>
+<h2>2023년 1학기 시간표</h2>
+<table border="1" width="100%"
+       <thead>
+        <tr>
+          <th>구분</th>
+          <th>월</th>
+          <th>화</th>
+          <th>수</th>
+          <th>목</th>
+          <th>금</th>
+        </thead>
+        <tbody>
+          <tr>
+            <th>1교시</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>.</td>
+            <td rowspan="2">공학적글쓰기</td>
+            <td>.</td>
+            <td></td>
+          </tr>
+          <tr>
+            <th>2교시</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>  
+            <th>3교시</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <tr> 
+            <th>4교시</th>        
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            </tr>
+            <tr>
+            <th>5교시</th>           
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            </tr>
+            <tr></tr>
+            <th>6교시</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            </tr>
+            <tr>
+            <th>7교시</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            </tr>
+            <tr>
+            <th>8교시</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            </tr>
+        </tbody>
 </body>
 </html>
